--- a/curtain.css
+++ b/curtain.css
@@ -1,24 +1,29 @@
-html{
-    height: 100%;
-    overflow-x: hidden;
+html {
+  height: 100%;
+  overflow-x: hidden;
 }
 
-.curtains{
-    width: 100%;
-    z-index:1;
-    position:relative;
+.curtains {
+  position: relative;
+  width: 100%;
+  z-index: 1;
 }
 
-.curtains>li{
-    background: white;
-    position: fixed;
-    display:block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 100%;
-    overflow: hidden;
-    z-index:1;
+.curtains > section {
+  background: white;
+  min-height: 100%;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
-.curtains>li.hidden{display:none;}
-.curtains>li:first-child{z-index:2;}
+
+.curtains > section.hidden {
+  display: none;
+}
+
+.curtains > section:first-child {
+  z-index: 2;
+}
